--- a/templates/base.html
+++ b/templates/base.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>QHacks</title>
+    <title>Template</title>
 </head>
 <body>
-    
+    <h1>Template</h1>
+    {% block content %}
+    {% endblock %}
+
 </body>
 </html>
