--- a/templates/index.html
+++ b/templates/index.html
@@ -1,14 +1,27 @@
 {% extends 'base.html' %}
 {% block content %}
-<h2>Index page</h2>
-<!--This for loop will render course codes/names to the page -->
-<ul>
-    {% for course in courses %}
-    <li>
-        <h4>{{course.code}}</h4>
-        <h5>{{course.name}}</h5>
-        <br>
-    </li>
-    {% endfor %}
-</ul>
+<div class="container">
+    <span class="course-title">
+        <h2>My classes</h2>
+        <div class="semester">
+            <label for="cars">Semester: </label>
+            <select name="semesters" id="semesters">
+                <option value="2020fall">2020 Fall</option>
+                <option selected="selected" value="2021winter">2021 Winter</option>
+            </select>
+        </div>
+
+    </span>
+
+    <!--This for loop will render course codes/names to the page -->
+    <ul class="course-list">
+        {% for course in courses %}
+        <li>
+            <h4>{{course.code}}</h4>
+            <h5>{{course.name}}</h5>
+            <br>
+        </li>
+        {% endfor %}
+    </ul>
+</div>
 {% endblock %}
