better styling on index page

--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
                 <li><a href={{ url_for('index') }}>QScores</a></li>
                 <!--Place holder initials-->
                 <li>
-                    <h3>HL</h3>
+                    <h3>HANK</h3>
                 </li>
             </ul>
         </nav>
@@ -24,7 +24,7 @@
 
     <!--Right Sidebar-->
     <div class="sidenav">
-        <h3>My Profile</h3>
+        <h3>MY PROFILE</h3>
         <a href={{ url_for('settings') }}>Settings</a>
         <a href={{ url_for('achievements') }}>Achievements</a>
         <a href="">Add/Delete a class</a>
