--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -8,26 +8,33 @@
     font-family: 'Open Sans', sans-serif;
 }
 
+body {
+    background-color: #ffd9cc;
+}
+
 /* ------------ HEADER BAR ------------ */
 .topnav {
-    background-color: rgb(185, 184, 184);
+    background-color: #993333;
     overflow: hidden;
 }
   
 /* Style the links inside the navigation bar */
 .topnav a {
     float: left;
-    color: #000000;
+    color: rgb(255, 255, 255);
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
-    font-size: 17px;
+    font-size: 20px;
+    font-weight: bold;
+
 }
 
 .topnav li h3 {
     float: right;
     margin-right: 20px;
     margin-top: 13px;
+    color: rgb(255, 255, 255);
 }
 
 .topnav ul {
@@ -36,25 +43,32 @@
 
 /* Change the color of links on hover */
 .topnav a:hover {
-    background-color: rgb(94, 94, 94);
-    color: rgb(255, 255, 255);
+    background-color: #ffcc33 ;
+    color: rgb(0, 0, 0);
 }
 
 /* ------------ SIDE BAR ------------ */
 .sidenav {
-    height: 100%; /* Full-height: remove this if you want "auto" height */
+    height: 100vh; /* Full-height: remove this if you want "auto" height */
     width: 220px; /* Set the width of the sidebar */
-    position: fixed; /* Fixed Sidebar (stay in place on scroll) */
+    float: right;
     z-index: -1; /* Stay under header */
     top: 0; /* Stay at the top */
     right: 0; /* stay on the right of the screen */
-    background-color: rgb(85, 85, 85); /* Black */
+    background-color: #f8d774; /* Black */
     overflow-x: hidden; /* Disable horizontal scroll */
-    padding-top: 20px;
-    padding-left: 15px;
-    margin-top: 50px;
+    padding-top: 0px;
+
 }
   
+.sidenav h3 {
+    background-color: #f3bb13;
+    margin: 0;
+    padding-left: 15px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
 /* The navigation menu links */
 .sidenav a {
     padding: 6px 8px 6px 16px;
@@ -96,13 +110,31 @@
 
 .course-card {
     box-shadow: 0 3px 8px 0 rgba(0, 0, 0, 0.2);
-    padding: 16px;
+    padding: 10px;
+    background-color: white;
     text-align: center;
-    width: 400px;
+    width: 380px;
     margin-right: 20px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    border-radius: 10px;
+}
+
+.course-card img {
+    width: 40%;
 }
 
 .course-card:hover {
     box-shadow: 0 3px 8px 0 rgba(0, 0, 0, 0.6);
     cursor: pointer;
+}
+
+.course-name {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    margin: auto;
 }
