--- a/templates/home.html
+++ b/templates/home.html
@@ -12,6 +12,29 @@
     <div class="topnav">
         <h1>QScores</h1>
     </div>
+    <div class="main-container">
+        <div>
+            <h2>A new way for Queen's students to stay on top of classes</h3>
+        </div>
+        <div class="card-container">
+            <div class="card colour1">
+                <p>Gain points for completing school work!</p>
+            </div>
+            <div class="card colour2">
+                <p>Manage classes with ease!</p>
+            </div>
+            <div class="card colour3">
+                <p>See how your classmates are doing!</p>
+            </div>
+        </div>
+        <div class="buttons">
+            <button>LOGIN</button>
+            <button>SIGN UP</button>
+        </div>
+    </div>
+    <footer>
+
+    </footer>
 </body>
 
 </html>
