added functionality to home page buttons

--- a/templates/home.html
+++ b/templates/home.html
@@ -28,13 +28,12 @@
             </div>
         </div>
         <div class="buttons">
-            <button>LOGIN</button>
-            <button>SIGN UP</button>
+            <button id="login">LOGIN</button>
+            <button id="signup">SIGN UP</button>
         </div>
     </div>
-    <footer>
-
-    </footer>
+    <footer></footer>
+    <script src="../static/scripts/buttons.js"></script>
 </body>
 
 </html>
