--- a/templates/achievements.html
+++ b/templates/achievements.html
@@ -1,4 +1,22 @@
-{% extends 'base.html' %}
-{% block content %}
-<h2>Achievements</h2>
+<!DOCTYPE html>
+<html lang="en">
+    {% extends 'base.html' %}
+    {% block content %}
+
+<body>
+    <div class="container">
+        <span class="course-title">
+            <h2>ACHIEVEMENTS</h2>
+                <div id="progressbar">
+                    <div></div>
+                </div>
+        </span>
+    </div>
+
+    
+</body>
+
+
+</html>
+
 {% endblock %}
