received POST data from the login page

--- a/templates/login.html
+++ b/templates/login.html
@@ -1,11 +1,11 @@
 {% extends 'logintemplate.html' %}
 {% block content %}
 <div class="form-container">
-<h2>Login</h2>
-<form id="login-form">
-    <input type="text"     name="username" id="username-field" class="login-field" placeholder="Username">
-    <input type="password" name="password" id="password-field" class="login-field" placeholder="Password">
-    <input type="submit"     value="Login" id="login-submit">
-</form>
+    <h2>Login</h2>
+    <form action="#" method="post" id="login-form">
+        <input type="text" name="username" id="username-field" class="login-field" placeholder="Username">
+        <input type="password" name="password" id="password-field" class="login-field" placeholder="Password">
+        <input type="submit" value="Login" id="login-submit">
+    </form>
 </div>
 {% endblock %}
