--- a/templates/logintemplate.html
+++ b/templates/logintemplate.html
@@ -15,7 +15,7 @@
             <ul>
                 <li><a href={{ url_for('index') }}>QScores</a></li>
                 <li>
-                    <h3>{{ page_name}}</h3>
+                    <h3 class="login-template">{{ page_name}}</h3>
                 </li>
             </ul>
         </nav>
