--- a/templates/login.html
+++ b/templates/login.html
@@ -1,11 +1,13 @@
 {% extends 'logintemplate.html' %}
 {% block content %}
 <div class="form-container">
-<h2>Login</h2>
 <form id="login-form">
-    <input type="text"     name="username" id="username-field" class="login-field" placeholder="Username">
-    <input type="password" name="password" id="password-field" class="login-field" placeholder="Password">
-    <input type="submit"     value="Login" id="login-submit">
+    <label for="username-field" class="login-label">Student ID</label>
+    <input type="text"     name="username" id="username-field" class="login-field" autocomplete="off">
+
+    <label for="password-field" class="login-label">Password</label>
+    <input type="password" name="password" id="password-field" class="login-field" autocomplete="off">
+    <input type="submit"      value="NEXT" id="login-submit">
 </form>
 </div>
 {% endblock %}
