--- a/templates/achievements.html
+++ b/templates/achievements.html
@@ -6,16 +6,46 @@
 <body>
     <div class="container">
         <span class="course-title">
-            <h2>ACHIEVEMENTS</h2>
-                <div id="progressbar">
-                    <div></div>
+            <h2>YOUR ACHIEVEMENTS</h2>
+                <div class="progress-info">
+                    <div id="progressbar">
+                        <div></div>
+                    </div> 
+                    <p>YOU HAVE COMPLETED <strong>46%</strong> OF THIS WEEK'S WORK</p>
                 </div>
         </span>
     </div>
 
-    
-</body>
+    <div class="container">
+            <div class="course-points">
+                <div class="total-qpoints"><strong>Your total QPoints: 42069</strong></div>
+            </div>
+    </div>
 
+    <div class="container">
+        <div class="course-points">
+        <div class="lectures-attended"><strong>Lectures attended: 69</strong></div>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="course-points">
+        <div class="assignments-completed"><strong>Assignments completed: 3</strong></div>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="course-points">
+        <div class="average-grade"><strong>Average grade: 69%</strong></div>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="course-points">
+        <div class="overall-rank"><strong>Overall Rank: 17/9860</strong></div>
+        </div>
+    </div>
+</body>
 
 </html>
 
