Added (some) button code (needs to be relocated from achievements -> navbar in base)

--- a/templates/achievements.html
+++ b/templates/achievements.html
@@ -45,6 +45,8 @@
         <div class="overall-rank"><strong>Overall Rank: 17/9860</strong></div>
         </div>
     </div>
+
+    <button class="button icon" style="text-align:center"><strong>HL</strong></button>
 </body>
 
 </html>
