--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -164,7 +164,7 @@ body {
     font-size: 20px;
     box-shadow: 0 3px 8px 0 rgba(0, 0, 0, 0.2);
     padding: 20px;
-    background-color: rgb(255, 219, 57);
+    background-color: #ffdb39;
     text-align: center;
     width: 380px;
     margin-right: 20px;
@@ -172,4 +172,17 @@ body {
     flex-direction: row;
     align-items: center;
     border-radius: 10px;
+}
+
+.button {
+    background-color: #ffdb39;
+    border: none;
+    color: rgb(0, 0, 0);
+    padding: 20px;
+    text-align: center;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    border-radius: 50%;
 }
