added class page route

--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -82,6 +82,26 @@ body {
     color: #993333;
 }
 
+/* Popup log out thing */
+.popup {
+    cursor: pointer;
+}
+
+.popup .popuptext {
+    visibility: hidden;
+    width: 160px;
+    background-color: #555;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 8px 0;
+    position: absolute;
+    z-index: 1;
+    bottom: 125%;
+    left: 50%;
+    margin-left: -80px;
+}
+
 /* ------------ MAIN CONTENT ------------ */
 .container{
     width: 75%;
