--- a/templates/base.html
+++ b/templates/base.html
@@ -32,8 +32,8 @@
         <a href={{ url_for('achievements') }}>Achievements</a>
         <a href="">Add/Delete a class</a>
         <a href="">Log out</a>
-
     </div>
+    <script src="../static/scripts/logout.js"></script>
     {% block content %}
     {% endblock %}
 </body>
