--- a/templates/classpage.html
+++ b/templates/classpage.html
@@ -1,14 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<!--
-    THIS PAGE IS FOR ONE STATIC CLASS AT THE MOMENT, ALTER IT TO MAKE IT USEABLE FOR ANY CLASS
--->
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CISC 235</title> <!-- maybe make each class its own variable (from database) and insert whatever class up top-->
-</head>
-<body>
-    
-</body>
-</html>
+{% extends 'base.html' %}
+{% block content %}
+This is the class page
+{% endblock %}
