Added some stuff to classpage

--- a/templates/classpage.html
+++ b/templates/classpage.html
@@ -1,4 +1,23 @@
 {% extends 'base.html' %}
 {% block content %}
-This is the class page
+<body>
+    <div class="container">
+        <span class="course-title">
+            <h2>CISC 235</h2>
+            </span>
+    </div>
+
+    <div class="attendance-tab">
+        <div><strong>ATTENDANCE</strong></div>
+    </div>
+    
+    <!-- 
+    <div class="assignments-tab">
+        <div><strong>ASSIGNMENTS</strong></div>
+    </div> -->
+    
+
+    <div class="big-tab"></div>
+</body>
+
 {% endblock %}
