--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -228,3 +228,43 @@ body {
     border-radius: 50%;
     float: right;
 } */
+
+/* ------------ CLASS PAGE ------------ */
+
+.big-tab{
+    background-color: #f3bb13;  /* This colour will change depending on what tab is open */
+    height: 75%;
+    width: 88.5%;
+    position: absolute;
+    bottom: 0px;
+    display: flex;
+    flex-wrap: nowrap;
+}
+
+.attendance-tab{
+    background-color: #f3bb13; 
+    height: 40px;
+    width: 150px;
+    position: absolute;
+    bottom: 75%;
+    color:#000000;
+    font-size: 20px;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+}
+
+.assignments-tab{
+    background-color: #f3bb13; 
+    height: 40px;
+    width: 150px;
+    position: absolute;
+    bottom: 75%;
+    color:#000000;
+    font-size: 20px;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+}
