--- a/templates/classpage.html
+++ b/templates/classpage.html
@@ -10,11 +10,18 @@
     <div class="attendance-tab">
         <div><strong>ATTENDANCE</strong></div>
     </div>
-    
-    <!-- 
+
     <div class="assignments-tab">
         <div><strong>ASSIGNMENTS</strong></div>
-    </div> -->
+    </div>
+
+    <div class="tests-tab">
+        <div><strong>TESTS</strong></div>
+    </div>
+
+    <div class="breakdown-tab">
+        <div><strong>BREAKDOWN</strong></div>
+    </div>    
     
 
     <div class="big-tab"></div>
