--- a/templates/classpage.html
+++ b/templates/classpage.html
@@ -7,22 +7,23 @@
             </span>
     </div>
 
+
     <div class="attendance-tab">
-        <div><strong>ATTENDANCE</strong></div>
+        <input type="submit" value="ATTENDANCE" id="attendance-submit">
     </div>
 
     <div class="assignments-tab">
-        <div><strong>ASSIGNMENTS</strong></div>
+        <input type="submit" value="ASSIGNMENTS" id="assignments-submit">
     </div>
 
     <div class="tests-tab">
-        <div><strong>TESTS</strong></div>
+        <input type="submit" value="TESTS" id="tests-submit">
     </div>
 
     <div class="breakdown-tab">
-        <div><strong>BREAKDOWN</strong></div>
+        <input type="submit" value="BREAKDOWN" id="breakdown-submit">
     </div>    
-    
+
 
     <div class="big-tab"></div>
 </body>
