--- a/templates/classpage.html
+++ b/templates/classpage.html
@@ -7,27 +7,32 @@
             </span>
     </div>
 
+    <script>
+        // Function to change element background color
+        function changeHeadingBg(color){
+            document.getElementById('big-tab').style.background = color;
+        }
+    </script>    
+
 
     <div class="attendance-tab">
-        <input type="submit" value="ATTENDANCE" id="attendance-submit">
+        <input type="button" onclick="changeHeadingBg('#f3bb13')" value="ATTENDANCE" id="attendance-button">
     </div>
 
     <div class="assignments-tab">
-        <input type="submit" value="ASSIGNMENTS" id="assignments-submit">
+        <input type="button" onclick="changeHeadingBg('#ffce39')" value="ASSIGNMENTS" id="assignments-button">
     </div>
 
     <div class="tests-tab">
-        <input type="submit" value="TESTS" id="tests-submit">
+        <input type="button" onclick="changeHeadingBg('#ffda69')" value="TESTS" id="tests-button">
     </div>
 
     <div class="breakdown-tab">
-        <input type="submit" value="BREAKDOWN" id="breakdown-submit">
-    </div>    
+        <input type="button" onclick="changeHeadingBg('#f3e5b6');" value="BREAKDOWN" id="breakdown-button">
+    </div>
 
 
-    <div class="big-tab"></div>
+    <div id="big-tab"></div>
 </body>
-
-<!-- yeet -->
 
 {% endblock %}
