--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -137,7 +137,7 @@ body {
     display: flex;
     flex-direction: row;
     align-items: center;
-    border-radius: 10px;
+    border-radius: 10px;    
 }
 
 .course-card img {
@@ -156,6 +156,7 @@ body {
     align-items: center;
     flex-wrap: wrap;
     margin: auto;
+    color: black;
 }
 
 /* ------------ ACHIEVEMENTS ------------ */
