--- a/templates/index.html
+++ b/templates/index.html
@@ -18,6 +18,7 @@
         <ul class="course-list">
             {% for course in courses %}
             <li>
+                <a style="text-decoration: none" href={{ url_for('classpage') }}>
                 <div class="course-card">
                     <img src="../static/img/queensflag.jpg" alt="">
                     <div class="course-name">
@@ -25,6 +26,7 @@
                         <h5>{{course.name}}</h5>
                     </div>
                 </div>
+                </a>
                 <br>
             </li>
             {% endfor %}
