Log out now links to home page

--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,7 @@
         <h3>MY PROFILE</h3>
         <a href={{ url_for('achievements') }}>Achievements</a>
         <a href="">Add/Delete a class</a>
-        <a href="">Log out</a>
+        <a href={{ url_for('welcome') }}>Log out</a>
     </div>
     <script src="../static/scripts/logout.js"></script>
     {% block content %}
