--- a/templates/login.html
+++ b/templates/login.html
@@ -1,6 +1,7 @@
 {% extends 'logintemplate.html' %}
 {% block content %}
 <div class="form-container">
+    <h1 id="login-header">LOG IN</h1>
     <form method="post" action="#" id="login-form">
         <label for="username-field" class="login-label">Student ID</label>
         <input type="number" 
