--- a/templates/achievements.html
+++ b/templates/achievements.html
@@ -16,35 +16,65 @@
         </span>
     </div>
 
-    <div class="container">
-        <div class="course-points">
-            <div class="total-qpoints"><strong>Your total QPoints: 42069</strong></div>
+    <div class="both-things">
+
+        <div class="point-things">
+            <div class="container">
+                <div class="course-points">
+                    <div class="total-qpoints"><strong>Your total QPoints: 42069</strong></div>
+                </div>
+            </div>
+
+            <div class="container">
+                <div class="course-points">
+                    <div class=total-courses"><strong>Total Courses Taken: 15</strong></div>
+                </div>
+            </div>
+
+            <div class="container">
+                <div class="course-points">
+                    <div class="lectures-attended"><strong>Lectures Attended: 69</strong></div>
+                </div>
+            </div>
+
+            <div class="container">
+                <div class="course-points">
+                    <div class="assignments-completed"><strong>Assignments Completed: 14</strong></div>
+                </div>
+            </div>
+
+            <div class="container">
+                <div class="course-points">
+                    <div class="assignments-early"><strong>Assignments Handed in Early: 2</strong></div>
+                </div>
+            </div>
+
+            <div class="container">
+                <div class="course-points">
+                    <div class="group-projects"><strong>Group Projects Completed: 2</strong></div>
+                </div>
+            </div>
+
+            <div class="container">
+                <div class="course-points">
+                    <div class="average-grade"><strong>Average Grade: 97%</strong></div>
+            </div>
+
+            <div class="container">
+                <div class="course-points">
+                    <div class="overall-q-rank"><strong>Overall Q Rank: 17/9860</strong></div>
+                </div>
+            </div>
         </div>
+
+        <div class="achievement-things">
+            <div class="achievement-conatainer">
+                <div class="course-icons">hello</div>
+            </div>
+        </div>
+
     </div>
 
-    <div class="container">
-        <div class="course-points">
-            <div class="lectures-attended"><strong>Lectures attended: 69</strong></div>
-        </div>
-    </div>
-
-    <div class="container">
-        <div class="course-points">
-            <div class="assignments-completed"><strong>Assignments completed: 3</strong></div>
-        </div>
-    </div>
-
-    <div class="container">
-        <div class="course-points">
-            <div class="average-grade"><strong>Average grade: 69%</strong></div>
-        </div>
-    </div>
-
-    <div class="container">
-        <div class="course-points">
-            <div class="overall-rank"><strong>Overall Rank: 17/9860</strong></div>
-        </div>
-    </div>
 </body>
 
 </html>
